--- a/package.json
+++ b/package.json
@@ -18,18 +18,26 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
+    "db:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop -d ormconfig.ts",
+    "db:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync -d ormconfig.ts",
+    "db:fixtures": "fixtures load ./data/fixtures --dataSource=./ormconfig.ts --require=ts-node/register --require=tsconfig-paths/register"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/typeorm": "^9.0.1",
+    "better-sqlite3": "^7.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -41,6 +49,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -52,7 +61,13 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
+    "typeorm-fixtures-cli": "^3.0.1",
     "typescript": "^4.3.5"
+  },
+  "overrides": {
+    "typeorm-fixtures-cli": {
+      "glob": "7.2.3"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
